devops-ui/devopsui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsui-service
  labels: 
    app: devopsui
spec:
  type: NodePort
  selector:
    app: devopsui
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 20
  ports:
    - name: webport
      protocol: TCP
      port: 80
      nodePort: 30775
