devops-ui/devopswebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopswebui-service
  labels: 
    app: devopswebui
spec:
  type: NodePort
  selector:
    app: devopswebui
  ports:
    - name: webport
      protocol: TCP
      port: 80
      nodePort: 30775
