devops-ui/devopsui-ingress-xipio.yaml
# Source: db/templates/ingressdbgui.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devopsui-xip-ing
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "XXXXXXXXXXXXXXXXXXXXXX.任意Node的IP.xip.io"
    http:
      paths:
      - backend:
          serviceName: devopsui-service
          servicePort: 80
        path: "/"
        pathType: "ImplementationSpecific"
